@@ -1,0 +1,50 @@
+In order to retag something to a new version do the following
+1)  increment the version numbers in Makefile, powerman.spec, and pm 
+2)  Fix bugs and make changes
+3)  cvs commit
+4)  you will probaly want to remove the previous version, especially
+      if you are installing an identically numbered (but different)
+      version during debugging.
+	rpm -q powerman
+	rpm -e powerman-x.y.z-r
+5)  make rpm tag=HEAD
+    This would be "make rpm tag=powerman-x-y-z-branch" in the case of
+    a branch in the sources, where "powerman-x-y-z-branch" is the
+    branch tag.
+6)  distribute to test sites
+7)  rpm -i powerman-x.y.z-r.i386.rpm  (if, like me, you ended up 
+            with a bunch of rpm database entires you can't get rid
+	    of you may need the --force below, best if you can get
+	    on without it by religiously doing step 4)
+	rpm -i powerman-x.y.z-r.i386.rpm --force
+8)  Verify it's all working as you like.  If it is not then return to
+      step 2.
+9) When a tag=HEAD version seems to work unmodified, you can just
+     update the release number and distribute the tag=HEAD version,
+     but this is not reproducable.  Once you've reached a stable point
+     you should.  
+       a) cvs rtag powerman-x-y-z powerman
+          (If you're being naughty and fixing problems in an already
+          tagged release then add the -F option, but only do this when
+          you can guarantee that you can destroy all the previously
+          distributed instances of this version, as during late
+          testing) 
+       b) make rpm
+       c) distribute widely
+
+It is permissable to hand out tag=HEAD versions, which are
+irreproducible under this scheme, so long as you make it clear that it
+is an interim solution in an emergency and should be updated as soon
+as possible.  When doing so you should use a release version greater
+than one.  
+
+local targets for distribution include:
+testing:
+	turing
+	devi
+	tritium
+	deuterium
+production:
+	furnace
+	pcrai
+	pcrbi
