@@ -99,6 +99,14 @@
 #	that are usefull to all modules.  Finally, all the old man
 #	pages have been removed in favor of just the pm.1 and 
 #	powerman.conf.5 pages.
+#                  Forthermore, the I/O to icebox units has been 
+#	reimplemented using os.read/write.  All such I/O is now mediated
+#       by a single "prompt" command.  The signal handling for the
+#	alarm is with the prompt command and both are in the pm_utils
+#       module.   Other minor changes and bug fixes.
+# v. 0-1-10:  2002-01-24
+#	         Repair the etherwake module so that it is no longer a 
+#	toggle.
 ####################################################################
 
 
